@@ -1,6 +1,9 @@
 Unreleased
 -----------------------------------
 
+- fix issue244 by implementing special index for parameters to only use
+  indices for paramentrized test ids
+
 - fix issue287 by running all finalizers but saving the exception
   from the first failing finalizer and re-raising it so teardown will
   still have failed.  We reraise the first failing exception because
